<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="gkplayer">GK Media Player</string>
    <string name="record">Record a Sound</string>
    <string name="previous">Play previous song</string>
    <string name="play">Play/Pause current song</string>
    <string name="stop">Stop current song</string>
    <string name="next">Play next song </string>
    <string name="empty_spaces">0:00</string>
    <string name="loop">Loop through a song</string>
    <string name="show_list">Show Playlist</string>
    <string name="shuffle">Shuffle through random songs</string>
</resources>
