<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gkplayer"
            android:gravity="center"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size"
                android:id="@+id/image"
                android:background="@drawable/discoball"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/app_name"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingStart="@dimen/seek_bar_padding"
                android:paddingLeft="@dimen/seek_bar_padding"
                android:paddingEnd="@dimen/seek_bar_padding"
                android:paddingRight="@dimen/seek_bar_padding"
                android:visibility="invisible"
                android:id="@+id/volumeControl"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:id="@+id/albumName"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:gravity="start|center"/>

            <ImageButton
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                android:id="@+id/shuffle"
                android:contentDescription="@string/shuffle"
                android:src="@mipmap/shuffle_not_active"
                android:scaleType="fitXY"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="0.3"
                android:onClick="shuffle"/>

            <ImageButton
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                android:id="@+id/loop_song"
                android:contentDescription="@string/loop"
                android:src="@mipmap/repeat_not_active"
                android:scaleType="fitXY"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="0.3"
                android:onClick="repeat"/>

            <ImageButton
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                android:id="@+id/show_playlist"
                android:contentDescription="@string/show_list"
                android:src="@mipmap/list"
                android:scaleType="fitXY"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="0.3"
                android:onClick="showPlaylist"/>



        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:id="@+id/curSong"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textColor="@color/white"/>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_container"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remaining_song_time"
                android:text="@string/empty_spaces"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:id="@+id/seekbar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/song_duration"
                android:text="@string/empty_spaces"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:contentDescription="@string/record"
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/volume"
                android:src="@mipmap/speaker"
                android:scaleType="fitXY"
                android:onClick="showVolumeControl"
                />

            <ImageButton
                android:contentDescription="@string/previous"
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/previous"
                android:src="@mipmap/previous"
                android:scaleType="fitXY"
                android:onClick="prevSong"
                />

            <ImageButton
                android:contentDescription="@string/play"
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/Pause"
                android:src="@mipmap/play"
                android:scaleType="fitXY"
                android:onClick="play"
                />

            <ImageButton
                android:contentDescription="@string/stop"
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/Stop"
                android:src="@mipmap/stop"
                android:scaleType="fitXY"
                android:onClick="stop"
                />

            <ImageButton
                android:contentDescription="@string/next"
                android:layout_width="@dimen/menu_button_dimensions"
                android:layout_height="@dimen/menu_button_dimensions"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/next"
                android:src="@mipmap/next"
                android:scaleType="fitXY"
                android:onClick="nextSong"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>