<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lightsilver">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ListView
            android:padding="@dimen/list_view_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/playlist"
            android:layout_gravity="start">
        </ListView>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingStart="@dimen/seek_bar_padding"
            android:paddingLeft="@dimen/seek_bar_padding"
            android:paddingEnd="@dimen/seek_bar_padding"
            android:paddingRight="@dimen/seek_bar_padding"
            android:id="@+id/list_volume_control"
            android:max="10"
            android:visibility="gone"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.05"
        android:id="@+id/button_bar"
        android:visibility="gone"
        android:background="@color/black"
        android:paddingBottom="@dimen/list_items_padding">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_player_seekbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/list_view_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/list_show_song"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:layout_weight="2"/>

            <ImageButton
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:background="@mipmap/previous"
                android:scaleType="fitXY"
                android:contentDescription="@string/previous"
                android:id="@+id/simple_previous"
                android:onClick="simplePrevious" />

            <ImageButton
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:background="@mipmap/pause"
                android:scaleType="fitXY"
                android:contentDescription="@string/play"
                android:id="@+id/simple_play"
                android:onClick="simplePlay"/>

            <ImageButton
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:background="@mipmap/next"
                android:scaleType="fitXY"
                android:contentDescription="@string/next"
                android:id="@+id/simple_next"
                android:onClick="simpleNext"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>